<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tv_recyclable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/title_recycling"
            android:textColor="@color/xui_config_color_white"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tv_harmful"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/title_harmfulwaste"
            android:textColor="@color/xui_config_color_white"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tv_dry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/title_drygarbage"
            android:textColor="@color/xui_config_color_white"
            android:layout_weight="1"/>


        <TextView
            android:id="@+id/tv_wet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/title_wetgarbage"
            android:textColor="@color/xui_config_color_white"
            android:layout_weight="1" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/rg_vote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <RadioButton
            android:id="@+id/rb_recyclable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_recyclable_bucket"
            android:text="@string/vote"
            android:layout_weight="1"
            android:textColor="@color/xui_config_color_white"
            android:button="@null"
            android:gravity="center_horizontal"
            />

        <RadioButton
            android:id="@+id/rb_harmful"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_harmful_bucket"
            android:text="@string/vote"
            android:layout_weight="1"
            android:textColor="@color/xui_config_color_white"
            android:button="@null"
            android:gravity="center_horizontal"/>

        <RadioButton
            android:id="@+id/rb_dry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_dry_bucket"
            android:text="@string/vote"
            android:layout_weight="1"
            android:textColor="@color/xui_config_color_white"
            android:button="@null"
            android:gravity="center_horizontal"/>

        <RadioButton
            android:id="@+id/rb_wet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_wet_bucket"
            android:text="@string/vote"
            android:layout_weight="1"
            android:textColor="@color/xui_config_color_white"
            android:button="@null"
            android:gravity="center_horizontal"/>

    </RadioGroup>


</LinearLayout>
