<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:background="@drawable/blur"
    android:layout_margin="10dp">

    <LinearLayout
        android:id="@+id/ll_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/blur"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_goods_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="标题"
            android:textColor="@color/xui_config_color_white"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/tv_recyclable"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/title_recycling"
                android:textColor="@color/xui_config_color_white" />

            <TextView
                android:id="@+id/tv_harmful"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/title_harmfulwaste"
                android:textColor="@color/xui_config_color_white" />

            <TextView
                android:id="@+id/tv_dry"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/title_drygarbage"
                android:textColor="@color/xui_config_color_white" />


            <TextView
                android:id="@+id/tv_wet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/title_wetgarbage"
                android:textColor="@color/xui_config_color_white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/rb_recyclable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/bg1"
                android:gravity="center_horizontal"
                android:text="@string/vote"

                android:textColor="@color/xui_config_color_white" />

            <TextView
                android:id="@+id/rb_harmful"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/bg2"
                android:gravity="center_horizontal"
                android:text="@string/vote"

                android:textColor="@color/xui_config_color_white" />

            <TextView
                android:id="@+id/rb_dry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/bg3"
                android:gravity="center_horizontal"
                android:text="@string/vote"
                android:textColor="@color/xui_config_color_white" />

            <TextView
                android:id="@+id/rb_wet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/bg4"
                android:gravity="center_horizontal"
                android:text="@string/vote"
                android:textColor="@color/xui_config_color_white" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
